Attempt at fixing fixed elements on mobile

--- a/www/style-rts.linux.css
+++ b/www/style-rts.linux.css
@@ -2604,6 +2604,7 @@ div > .MJXc-display {
 		height: 100%;
 	}
 	#ui-elements-container > * {
+		position: fixed;
 		visibility: hidden;
 		opacity: 1.0 !important;
 	}
